# smart-bucket

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  SECURITY.md  dkbuild.yml  pyproject.toml  requirements.txt  requirementst.txt
.github/workflows/: ci-cd.yml  codeql.yml
docs/: aws-config.rst  conf.py  index.rst  merging.rst  modules.rst  sbucket.rst
sbucket/: baseobj.py  cache.py  environment.py  filetree.py  localfile.py  main.py  s3bucket.py  s3file.py  syncronize.py  utils.py
tests/: conftest.py  test_bucket.py  test_filetree.py  test_localfile.py  test_sbucket_import.py
tests/data/: generate_data.py
